# falilvfan-api

./: Cargo.toml  Dockerfile  configuration.dev.yaml  configuration.yaml  docker-compose.yaml  sqlx-data.json
.cargo/: config.toml
.github/workflows/: cargo-lints.yaml  rust.yaml
migrations/: 20221030061833_create_albums_table.sql  20221031111844_create_prefectures_table.sql  20221031112647_create_locations_table.sql  20221101032338_creat_track_table.sql  20221102111046_create_live_table.sql  20221102114203_crete_setlist_table.sql  20221103042554_add_event_name_col_to_live_table.sql
scripts/: init_db.mjs
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: fetch_albums.rs  fetch_lives.rs  fetch_locations.rs  fetch_tracks.rs  get_albums.rs  get_locations.rs  get_tracks.rs  mod.rs  register_album.rs  register_lives.rs  register_locations.rs  register_tracks.rs
tests/: health_check.rs  register_new_items.rs
tests/api/: fetch_locations.rs  fetch_tracks.rs  get_locations.rs  get_tracks.rs  health_check.rs  helpers.rs  main.rs  register_new_items.rs
tests/test_helpers/: mod.rs
